
$Id$

This is a human-readable revision history which will attempt to document
required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Version 5.6.5 (2010-07-14):
---------------------------

- Fixed scale calculation problem caused by mapscale.c's inchesPerUnits 
  array being out of synch with MS_UNITS enum (#3173)

- Fixed bitmap text font rendering (tiny was not working) (#3475)


Version 5.6.4 (2010-07-08):
---------------------------

IMPORTANT SECURITY FIXES:

- Disabled some insecure (and potentially exploitable) mapserv command-line
  debug arguments (#3485). The --enable-cgi-cl-debug-args configure switch
  can be used to re-enable them for devs who really cannot get away without
  them and who understand the potential security risk (not recommended for 
  production servers or those who don't understand the security implications).

- Fixed possible buffer overflow in msTmpFile() (#3484)

Other fixes:

- Fixed possible race condition with connectiontype WFS layers (#3137)

- Modified mapserver units enum order to fix some problems with external 
  packages (#3173)

- fix blending of transparent layers with AGG on MSB archs (#3471)

- Fixed imageObj->saveImage() sends unnecessary headers (#3418) 

- Correct PropertyName parsing for wfs post requests (#3235)

- Ensure mapwmslayer.c does not unlink file before closing connection on 
  it (#3451)

- Fix security exception issue in C# with MSVC2010 (#3438)

- Write out join CONNECTIONTYPE when saving a mapfile. (#3435)

- Fixed attribute queries to use an extent stored (and cached) as part of 
  the queryObj rather than the map->extent. (#3424)

- Reverted msLayerWhichItems() to 5.4-like behavior although still supporting 