@@ -11,6 +11,10 @@ the top of the list.)
 
 For a complete change history, please see the Subversion log comments.
 
+Current Version
+---------------
+- Fix computation of shape bounds when the first line contains no points
+  (#3119)(fixes #3383)
 
 Version 5.6.5 (2010-07-14):
 ---------------------------
